--- a/css/v1/variables.css
+++ b/css/v1/variables.css
@@ -2,13 +2,17 @@
 
     --primary-blue: #0065ca;
     --primary-blue-active: #0051a2;
+    --primary-blue-disabled: #99c1ea;
+
     --primary-blue-background-10: #cce0f4;
 
     --primary-green: #abda4f;
     --primary-green-active: #89ae3f;
-    --primary-green-background-10: #eef8dc;
+    --primary-green-disabled: #eef8dc;
 
     --accent-error: #e51a40;
     --accent-error-active: #b40425;
-    --red-aptus-lighter: #f8dcdc;
+    --accent-error-disabled: #f8dcdc;
+
+    --gray-aptus: #e3e6e8;
 }
