--- a/css/v1/aptus.css
+++ b/css/v1/aptus.css
@@ -54,7 +54,7 @@
 
 .btn-aptus {
     border: none;
-    border-radius: 56px;
+    border-radius: 3.5rem;
     padding: .375rem .75rem;
     font-size: 1rem;
     font-family: var(--primary-font-aptus), sans-serif;
@@ -90,11 +90,11 @@
 
 .btn-danger-aptus {
     color: #FFFFFF;
-    background-color: var(--accent-error)!important;
+    background-color: var(--accent-error);
 }
 
 .btn-danger-aptus:hover {
-    background-color: var(--accent-error-active)!important;
+    background-color: var(--accent-error-active);
 }
 
 .btn-danger-aptus:disabled {
@@ -128,6 +128,6 @@
 .subtitle {
     border-top: none;
     border-bottom: none;
-    border-left: solid var(--primary-blue-background-10) .25rem!important;
+    border-left: solid var(--primary-blue-background-10) .25rem;
     border-right: none;
 }
