Agregar color nuevo, cambiar examples.html a index.html y agregar kit de FontAwesome Free

--- a/css/v1/aptus.css
+++ b/css/v1/aptus.css
@@ -131,3 +131,7 @@
     border-left: solid var(--primary-blue-background-10) .25rem;
     border-right: none;
 }
+
+.warning-icon-aptus {
+    color: var(--accent-warning);
+}
